--- a/apps/control-room/public/analytics.html
+++ b/apps/control-room/public/analytics.html
@@ -427,7 +427,7 @@
 </head>
 <body>
   <header>
-    <h1>📊 Analytics Dashboard</h1>
+    <h1> Analytics Dashboard</h1>
     <div class="header-actions">
       <div class="realtime-indicator">
         <span class="realtime-dot"></span>
@@ -549,7 +549,7 @@
             <!-- Heat points will be dynamically generated -->
           </div>
           <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; color: var(--text-secondary);">
-            <p style="font-size: 1.2rem; margin-bottom: 10px;">📍 Heatmap Preview</p>
+            <p style="font-size: 1.2rem; margin-bottom: 10px;"> Heatmap Preview</p>
             <p style="font-size: 0.9rem;">Click data visualization for selected page</p>
           </div>
         </div>
@@ -563,25 +563,25 @@
       </div>
       <div class="feedback-grid" id="feedback-list">
         <div class="feedback-card">
-          <div class="rating">⭐⭐⭐⭐⭐</div>
+          <div class="rating"></div>
           <span class="category">Feature Request</span>
           <p class="message">Love the tilt detection! Would be great to have mobile notifications when I'm tilting.</p>
           <div class="meta">2 hours ago · /beta · Chrome 120</div>
         </div>
         <div class="feedback-card">
-          <div class="rating">⭐⭐⭐⭐</div>
+          <div class="rating"></div>
           <span class="category">Usability</span>
           <p class="message">The cooldown timer is helpful but I'd like to customize the duration myself.</p>
           <div class="meta">5 hours ago · /tools · Safari 17</div>
         </div>
         <div class="feedback-card">
-          <div class="rating">⭐⭐⭐</div>
+          <div class="rating"></div>
           <span class="category">Bug Report</span>
           <p class="message">Extension popup doesn't show on Stake sometimes. Have to refresh the page.</p>
           <div class="meta">1 day ago · /casinos · Firefox 121</div>
         </div>
         <div class="feedback-card">
-          <div class="rating">⭐⭐⭐⭐⭐</div>
+          <div class="rating"></div>
           <span class="category">General</span>
           <p class="message">This is exactly what I needed. Already helped me avoid a bad session yesterday.</p>
           <div class="meta">1 day ago · / · Chrome 120</div>
