--- a/apps/game-arena/public/arena.html
+++ b/apps/game-arena/public/arena.html
@@ -24,7 +24,7 @@
   <div class="arena-container">
     <header class="arena-header">
       <div>
-        <h1>🎮 Game Arena</h1>
+        <h1> Game Arena</h1>
         <p>Join a game or create your own</p>
       </div>
       <div class="user-panel">
@@ -32,7 +32,7 @@
         <div>
           <div id="user-name">Loading...</div>
           <a href="profile.html" class="secondary-button">Profile</a>
-          <a href="#integrations" class="secondary-button" onclick="window.location.href='profile.html#integrations'">⚡ Integrations</a>
+          <a href="#integrations" class="secondary-button" onclick="window.location.href='profile.html#integrations'"> Integrations</a>
           <button id="logout-btn" class="secondary-button">Logout</button>
         </div>
       </div>
@@ -41,7 +41,7 @@
     <div class="lobby">
       <div class="games-section">
         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
-          <h2>🕹️ Available Games</h2>
+          <h2> Available Games</h2>
           <div id="lobby-stats" class="lobby-stats">
             <span class="stat-item">
               <span class="stat-label">Active Games:</span>
@@ -59,7 +59,7 @@
       </div>
 
       <div class="create-game-section">
-        <h2>🎯 Create New Game</h2>
+        <h2> Create New Game</h2>
         <form id="create-game-form">
           <div class="form-group">
             <label for="game-type">Game Type:</label>
@@ -98,7 +98,7 @@
     <!-- Onboarding Modal -->
     <div id="onboarding-modal" class="modal">
       <div class="modal-content onboarding-content">
-        <h2>🎮 Welcome to Degens Against Decency!</h2>
+        <h2> Welcome to Degens Against Decency!</h2>
         <div class="onboarding-step active" data-step="1">
           <h3>Step 1: How to Play</h3>
           <p>Degens Against Decency is a hilarious party game where players match answer cards to fill in the blank on question cards. The Card Czar picks the funniest combo!</p>
