--- a/apps/game-arena/public/index.html
+++ b/apps/game-arena/public/index.html
@@ -20,7 +20,7 @@
     <div class="hero-content-wrapper">
       <div class="hero-logo">
         <h1 style="font-size: 3.5rem; margin: 0; background: linear-gradient(135deg, var(--brand-green), var(--brand-teal), var(--brand-purple)); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;">
-          🎮 TiltCheck Arena
+           TiltCheck Arena
         </h1>
       </div>
       
@@ -37,8 +37,8 @@
         </button>
 
         <div style="margin-top: 30px; color: var(--text-muted); font-size: 0.9rem;">
-          <p>🎴 Play <strong>Degens Against Decency</strong> - The degen card game</p>
-          <p style="margin-top: 10px;">♠️ Play <strong>Texas Hold'em Poker</strong> - With tilt detection</p>
+          <p> Play <strong>Degens Against Decency</strong> - The degen card game</p>
+          <p style="margin-top: 10px;"> Play <strong>Texas Hold'em Poker</strong> - With tilt detection</p>
           <p style="margin-top: 20px; font-size: 0.85rem;">Stats tracked across web and Discord • Unified leaderboards</p>
         </div>
       </div>
