--- a/apps/game-arena/public/profile.html
+++ b/apps/game-arena/public/profile.html
@@ -26,7 +26,7 @@
     <header class="profile-header">
       <div>
         <a href="/arena" class="back-link">← Back to Arena</a>
-        <h1>🎮 Player Profile</h1>
+        <h1> Player Profile</h1>
       </div>
       <div class="user-panel">
         <img id="user-avatar" src="" alt="User Avatar" />
@@ -60,7 +60,7 @@
 
       <!-- Stats Section -->
       <section class="profile-section stats-section">
-        <h3>📊 Game Statistics</h3>
+        <h3> Game Statistics</h3>
         <div class="stats-grid">
           <div class="stats-card">
             <div class="stat-label">Total Games</div>
@@ -83,7 +83,7 @@
 
       <!-- Game-Specific Stats -->
       <section class="profile-section game-stats-section">
-        <h3>🃏 Degens Against Decency</h3>
+        <h3> Degens Against Decency</h3>
         <div class="stats-grid">
           <div class="stats-card">
             <div class="stat-label">DA&D Games</div>
@@ -106,7 +106,7 @@
 
       <!-- Recent Games Section -->
       <section class="profile-section recent-games-section">
-        <h3>🕹️ Recent Games</h3>
+        <h3> Recent Games</h3>
         <div id="recent-games-list" class="game-history-list">
           <div class="loading">Loading recent games...</div>
         </div>
@@ -114,7 +114,7 @@
 
       <!-- Pending Tips Section -->
       <section id="pending-tips-section" class="profile-section pending-tips-section" style="display: none;">
-        <h3>⏳ Pending Tips</h3>
+        <h3> Pending Tips</h3>
         <p style="color: #888; margin-bottom: 16px;">Tips waiting for you to register your wallet</p>
         <div id="pending-tips-list" class="game-history-list">
           <div class="loading">Loading pending tips...</div>
@@ -123,7 +123,7 @@
 
       <!-- JustTheTip History Section -->
       <section class="profile-section tip-history-section">
-        <h3>💰 JustTheTip History</h3>
+        <h3> JustTheTip History</h3>
         <div class="tip-stats-row" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 16px; margin-bottom: 20px;">
           <div class="stats-card">
             <div class="stat-label">Total Sent</div>
@@ -149,31 +149,31 @@
 
       <!-- Achievements Section -->
       <section class="profile-section achievements-section">
-        <h3>🏆 Achievements</h3>
+        <h3> Achievements</h3>
         <div class="achievements-grid" id="achievements-grid">
           <div class="achievement unlocked">
-            <span class="achievement-icon">🎮</span>
+            <span class="achievement-icon"></span>
             <div class="achievement-info">
               <div class="achievement-title">First Game</div>
               <div class="achievement-desc">Play your first game</div>
             </div>
           </div>
           <div class="achievement locked">
-            <span class="achievement-icon">🔒</span>
+            <span class="achievement-icon"></span>
             <div class="achievement-info">
               <div class="achievement-title">Card Shark</div>
               <div class="achievement-desc">Win 10 games</div>
             </div>
           </div>
           <div class="achievement locked">
-            <span class="achievement-icon">🔒</span>
+            <span class="achievement-icon"></span>
             <div class="achievement-info">
               <div class="achievement-title">Comedy Legend</div>
               <div class="achievement-desc">Get 50 funniest picks</div>
             </div>
           </div>
           <div class="achievement locked">
-            <span class="achievement-icon">🔒</span>
+            <span class="achievement-icon"></span>
             <div class="achievement-info">
               <div class="achievement-title">Degen Master</div>
               <div class="achievement-desc">Reach level 10</div>
@@ -184,7 +184,7 @@
 
       <!-- Integrations Section -->
       <section id="integrations" class="profile-section integrations-section">
-        <h3>⚡ Integrations</h3>
+        <h3> Integrations</h3>
         <p class="section-desc">Connect your game arena with other TiltCheck services</p>
         
         <div class="integrations-grid">
@@ -196,12 +196,12 @@
             </div>
             <div class="integration-info">
               <div class="integration-name">Discord</div>
-              <div class="integration-status">✅ Connected</div>
+              <div class="integration-status"> Connected</div>
             </div>
           </div>
 
           <div class="integration-card">
-            <div class="integration-icon">🎰</div>
+            <div class="integration-icon"></div>
             <div class="integration-info">
               <div class="integration-name">TiltCheck Bot</div>
               <div class="integration-status">Link your Discord bot stats</div>
@@ -210,7 +210,7 @@
           </div>
 
           <div class="integration-card">
-            <div class="integration-icon">🔗</div>
+            <div class="integration-icon"></div>
             <div class="integration-info">
               <div class="integration-name">SusLink</div>
               <div class="integration-status">Get suspicious link alerts</div>
@@ -219,7 +219,7 @@
           </div>
 
           <div class="integration-card" id="justthetip-integration">
-            <div class="integration-icon">💰</div>
+            <div class="integration-icon"></div>
             <div class="integration-info">
               <div class="integration-name">JustTheTip</div>
               <div class="integration-status" id="wallet-status">Connect tip wallet</div>
