--- a/apps/user-dashboard/public/index.html
+++ b/apps/user-dashboard/public/index.html
@@ -17,7 +17,7 @@
 <body>
     <div id="not-logged-in" class="login-container">
         <div class="login-box">
-            <h1>👤 TiltCheck Dashboard</h1>
+            <h1> TiltCheck Dashboard</h1>
             <p>Manage your profile, wallets, and earnings</p>
             <a href="/auth/discord" class="btn-discord">
                 <svg width="20" height="20" viewBox="0 0 71 55" fill="none">
