--- a/apps/web/beta.html
+++ b/apps/web/beta.html
@@ -361,7 +361,7 @@
 </head>
 <body>
   <div class="hero">
-    <span class="beta-badge">🚀 Open Beta</span>
+    <span class="beta-badge"> Open Beta</span>
     <h1>Join the TiltCheck Beta Program</h1>
     <p>Help us build the future of responsible gambling tools. Get early access, shape features, and earn rewards for your feedback.</p>
   </div>
@@ -373,35 +373,35 @@
         <h2>Why Join Beta?</h2>
         <ul class="benefits-list">
           <li>
-            <span class="icon">🎁</span>
+            <span class="icon"></span>
             <div>
               <h4>Early Access</h4>
               <p>Be the first to try new features like TiltGuard, CollectClock, and the browser extension.</p>
             </div>
           </li>
           <li>
-            <span class="icon">💬</span>
+            <span class="icon"></span>
             <div>
               <h4>Direct Input</h4>
               <p>Your feedback directly shapes product decisions. We actually listen and implement suggestions.</p>
             </div>
           </li>
           <li>
-            <span class="icon">🏆</span>
+            <span class="icon"></span>
             <div>
               <h4>Beta Rewards</h4>
               <p>Earn exclusive badges, early supporter status, and bonus features for active participation.</p>
             </div>
           </li>
           <li>
-            <span class="icon">🔒</span>
+            <span class="icon"></span>
             <div>
               <h4>Priority Support</h4>
               <p>Get fast, direct access to the dev team through our Discord beta channel.</p>
             </div>
           </li>
           <li>
-            <span class="icon">🛡️</span>
+            <span class="icon"></span>
             <div>
               <h4>Shape Safety Features</h4>
               <p>Help us build better tilt detection, intervention timing, and protection tools.</p>
@@ -511,7 +511,7 @@
 
         <!-- Success Message -->
         <div class="success-message" id="success-message">
-          <div class="icon">🎉</div>
+          <div class="icon"></div>
           <h3>You're In!</h3>
           <p>Welcome to the beta! Follow the steps below to get started with Auto-Vault.</p>
 
