--- a/apps/web/extension.html
+++ b/apps/web/extension.html
@@ -48,7 +48,7 @@
         
         <div class="tools-grid" style="margin-top: 2rem;">
           <div class="tool-card">
-            <div class="tool-icon">🔌</div>
+            <div class="tool-icon"></div>
             <h3>Browser Extension</h3>
             <p><strong>Best for:</strong> Desktop auto-capture</p>
             <p>Intercepts casino WebSocket/API traffic automatically. Works with Chrome and Firefox.</p>
@@ -56,7 +56,7 @@
           </div>
 
           <div class="tool-card">
-            <div class="tool-icon">📱</div>
+            <div class="tool-icon"></div>
             <h3>PWA Sidebar</h3>
             <p><strong>Best for:</strong> Mobile & any device</p>
             <p>Quick-tap buttons to log wins/losses. Works offline with background sync.</p>
@@ -64,7 +64,7 @@
           </div>
 
           <div class="tool-card">
-            <div class="tool-icon">🔐</div>
+            <div class="tool-icon"></div>
             <h3>Provably Fair Upload</h3>
             <p><strong>Best for:</strong> Historical verification</p>
             <p>Upload seeds/CSV to verify past bets cryptographically.</p>
@@ -72,7 +72,7 @@
           </div>
 
           <div class="tool-card">
-            <div class="tool-icon">📷</div>
+            <div class="tool-icon"></div>
             <h3>Screen OCR</h3>
             <p><strong>Best for:</strong> Native casino apps</p>
             <p>AI reads game results from screen capture. Coming Q1 2025.</p>
