--- a/apps/web/faq.html
+++ b/apps/web/faq.html
@@ -380,7 +380,7 @@
           <h3>TiltCheck</h3>
           <p>Protecting degens from tilt-induced disaster.</p>
           <p style="margin-top: var(--space-md); font-size: var(--text-sm);">
-            <a href="/responsible-gambling" style="color: var(--color-warning);">🎰 Responsible Gambling Resources</a>
+            <a href="/responsible-gambling" style="color: var(--color-warning);"> Responsible Gambling Resources</a>
           </p>
         </div>
         <div>
@@ -426,7 +426,7 @@
           </a>
         </div>
         <p style="margin-bottom: 0.5rem;">
-          <a href="https://github.com/jmenichole/Portfolio" target="_blank" rel="noopener" style="color: var(--color-primary);">made for degens by degens ❤️</a>
+          <a href="https://github.com/jmenichole/Portfolio" target="_blank" rel="noopener" style="color: var(--color-primary);">made for degens by degens </a>
         </p>
         <p>
           Built by <a href="https://github.com/jmenichole" target="_blank" rel="noopener">jmenichole</a> • 
