--- a/apps/web/getting-started.html
+++ b/apps/web/getting-started.html
@@ -246,42 +246,42 @@
         <h2 id="tools-title">Pick Your Tools</h2>
         <div class="tool-quicklinks">
           <a href="/tools/suslink.html" class="tool-ql">
-            <span class="tool-ql-icon">🔗</span>
+            <span class="tool-ql-icon"></span>
             <div class="tool-ql-info">
               <strong>SusLink</strong>
               <span>AI scam &amp; link scanner</span>
             </div>
           </a>
           <a href="/tools/justthetip.html" class="tool-ql">
-            <span class="tool-ql-icon">🪙</span>
+            <span class="tool-ql-icon"></span>
             <div class="tool-ql-info">
               <strong>JustTheTip</strong>
               <span>Non-custodial SOL tipping</span>
             </div>
           </a>
           <a href="/tools/collectclock.html" class="tool-ql">
-            <span class="tool-ql-icon">🕐</span>
+            <span class="tool-ql-icon"></span>
             <div class="tool-ql-info">
               <strong>CollectClock</strong>
               <span>Bonus tracker &amp; nerf detection</span>
             </div>
           </a>
           <a href="/tools/freespinscan.html" class="tool-ql">
-            <span class="tool-ql-icon">🎰</span>
+            <span class="tool-ql-icon"></span>
             <div class="tool-ql-info">
               <strong>FreeSpinScan</strong>
               <span>Promo auto-classification</span>
             </div>
           </a>
           <a href="/tools/tiltcheck-core.html" class="tool-ql">
-            <span class="tool-ql-icon">🧠</span>
+            <span class="tool-ql-icon"></span>
             <div class="tool-ql-info">
               <strong>TiltCheck Core</strong>
               <span>Tilt engine &amp; accountability</span>
             </div>
           </a>
           <a href="/degen-trust.html" class="tool-ql">
-            <span class="tool-ql-icon">📊</span>
+            <span class="tool-ql-icon"></span>
             <div class="tool-ql-info">
               <strong>Trust Engine</strong>
               <span>Casino &amp; degen reputation</span>
