--- a/apps/web/help.html
+++ b/apps/web/help.html
@@ -15,15 +15,23 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-  <h1>TiltCheck Help Center</h1>
-  <p>Need help? Browse FAQs, troubleshooting guides, and contact support. Our team is here to help you use TiltCheck safely and effectively.</p>
   <div id="shared-nav"></div>
-  <nav class="navbar">
+
+  <main id="main-content" class="container">
+    <h1>TiltCheck Help Center</h1>
+    <p>Need help? Browse FAQs, troubleshooting guides, and contact support. Our team is here to help you use TiltCheck safely and effectively.</p>
+
+    <ul>
+      <li><a href="/faq.html">Frequently Asked Questions</a></li>
+      <li><a href="/getting-started.html">Getting Started Guide</a></li>
+      <li><a href="/how-it-works.html">How It Works</a></li>
+      <li><a href="/glossary.html">Glossary</a></li>
+      <li><a href="/contact.html">Contact Support</a></li>
+    </ul>
+  </main>
+
   <div id="shared-footer"></div>
-  <footer class="site-footer">
-  </footer>
-  </nav>
+  <script src="/scripts/components-loader.js"></script>
+  <script src="/scripts/auth.js"></script>
 </body>
-<script src="/scripts/components-loader.js"></script>
-<script src="/scripts/auth.js"></script>
 </html>
