--- a/apps/web/index-legacy.html
+++ b/apps/web/index-legacy.html
@@ -543,56 +543,56 @@
       <div class="tools-grid">
         
         <a class="tool-card" href="/tools/justthetip.html">
-          <div class="tool-icon">🪙</div>
+          <div class="tool-icon"></div>
           <h3>JustTheTip</h3>
           <p>Non-custodial Solana tipping, airdrops, and swaps. Flat fee. No balance custody. No legal exposure.</p>
           <span class="tool-status status-live">Live</span>
         </a>
 
         <a class="tool-card" href="/tools/suslink.html">
-          <div class="tool-icon">🔗</div>
+          <div class="tool-icon"></div>
           <h3>SusLink</h3>
           <p>AI-powered link scanner that detects scam sites, redirects, and impersonation before you click.</p>
           <span class="tool-status status-live">Live</span>
         </a>
 
         <a class="tool-card" href="/tools/collectclock.html">
-          <div class="tool-icon">⏰</div>
+          <div class="tool-icon"></div>
           <h3>CollectClock</h3>
           <p>Daily bonus tracker with nerf detection and bonus cycle prediction. Know when casinos change terms.</p>
           <span class="tool-status status-beta">Beta</span>
         </a>
 
         <a class="tool-card" href="/tools/freespinscan.html">
-          <div class="tool-icon">🎁</div>
+          <div class="tool-icon"></div>
           <h3>FreeSpinScan</h3>
           <p>Promo submission system with auto-classification, mod approval queue, and prediction engine.</p>
           <span class="tool-status status-beta">Beta</span>
         </a>
 
         <a class="tool-card" href="/tools/poker.html">
-          <div class="tool-icon">🃏</div>
+          <div class="tool-icon"></div>
           <h3>Poker</h3>
           <p>Texas Hold'em poker directly in Discord. Play with friends, track stats, climb leaderboards.</p>
           <span class="tool-status status-soon">Coming Soon</span>
         </a>
 
         <a class="tool-card" href="/tools/tiltcheck-core.html">
-          <div class="tool-icon">🧠</div>
+          <div class="tool-icon"></div>
           <h3>TiltCheck Core</h3>
           <p>Behavior analysis, cooldown nudges, and accountability tools. Helps you slow down without policing.</p>
           <span class="tool-status status-beta">Beta</span>
         </a>
 
         <a class="tool-card" href="/tools/qualifyfirst.html">
-          <div class="tool-icon">📋</div>
+          <div class="tool-icon"></div>
           <h3>QualifyFirst</h3>
           <p>AI survey router that pre-screens users to prevent screen-outs and wasted time.</p>
           <span class="tool-status status-soon">Coming Soon</span>
         </a>
 
         <a class="tool-card" href="/tools/daad.html">
-          <div class="tool-icon">🎮</div>
+          <div class="tool-icon"></div>
           <h3>DA&D</h3>
           <p>Degens Against Decency. AI-powered Cards Against Humanity-style game for degen communities.</p>
           <span class="tool-status status-soon">Coming Soon</span>
@@ -625,13 +625,13 @@
       <div class="features-list">
         <div class="feature-item">
           <div>
-            <h3>🏛️ Casino Trust Engine</h3>
+            <h3> Casino Trust Engine</h3>
             <p>Tracks fairness, payouts, nerfs, promos, and compliance across the ecosystem so you know who’s legit.</p>
           </div>
         </div>
         <div class="feature-item">
           <div>
-            <h3>🧠 Degen Trust Engine</h3>
+            <h3> Degen Trust Engine</h3>
             <p>Non-judgmental reputation around behavior, good faith, accountability, and scam detection. Transparency without punishment.</p>
           </div>
         </div>
