--- a/apps/web/login.html
+++ b/apps/web/login.html
@@ -155,7 +155,7 @@
     }
 
     .benefits li::before {
-      content: '✓';
+      content: '';
       color: var(--color-primary);
       font-weight: bold;
     }
@@ -217,7 +217,7 @@
 <body>
   <main id="main-content">
     <div class="login-card">
-      <div class="login-logo">🎮</div>
+      <div class="login-logo"><img src="/assets/logo/logocurrent.svg" alt="TiltCheck" width="48" height="48"></div>
       
       <h1>Sign in to TiltCheck</h1>
       <p class="subtitle">Connect your Discord account to access your dashboard, track trust scores, and manage your profile across the ecosystem.</p>
@@ -250,7 +250,7 @@
       </p>
 
       <div class="security-note">
-        <strong>🔒 Privacy Notice</strong>
+        <strong>Privacy Notice</strong>
         We only access your Discord username and avatar. No sensitive data is stored on our servers. You can revoke access anytime in your Discord settings.
       </div>
 
