--- a/apps/web/tools/collectclock.html
+++ b/apps/web/tools/collectclock.html
@@ -12,19 +12,25 @@
 
   <header class="tool-header">
     <div class="container">
-      <div class="tool-icon-large">⏰</div>
+      <div class="tool-icon-large"></div>
       <h1>CollectClock</h1>
       <p class="tool-tagline">Bonus cycle tracking & nerf detection</p>
       <p class="built-by">
         <a href="https://jmenichole.github.io/Portfolio/" target="_blank" rel="noopener">made for degens by degens</a>
-      <div id="shared-footer"></div>
-    </body>
-    <script src="/scripts/components-loader.js"></script>
-    </html>
-            <li>🔁 Cycle pattern modeling</li>
-            <li>⚠️ Alerting on anomalies</li>
-            <li>📊 Historical value trend charting</li>
-            <li>🧪 Beta tuning layer</li>
+      </p>
+    </div>
+  </header>
+
+  <section class="features-section">
+    <div class="container">
+      <h2>Features</h2>
+      <div class="features-grid">
+        <div class="feature-card">
+          <ul>
+            <li> Cycle pattern modeling</li>
+            <li> Alerting on anomalies</li>
+            <li> Historical value trend charting</li>
+            <li> Beta tuning layer</li>
           </ul>
         </div>
       </div>
@@ -117,11 +123,7 @@
     </div>
   </section>
 
-  <footer>
-    <div class="container">
-      <p><a href="/">Home</a> • <a href="/#tools">All Tools</a> • <a href="https://discord.gg/tiltcheck">Discord</a> • <a href="https://github.com/jmenichole/tiltcheck-monorepo">GitHub</a></p>
-      <p class="built-by">Built by <a href="https://github.com/jmenichole">jmenichole</a> • TiltCheck © 2024–2025</p>
-    </div>
-  </footer>
+  <div id="shared-footer"></div>
+  <script src="/scripts/components-loader.js"></script>
 </body>
 </html>
