--- a/apps/web/tools/daad.html
+++ b/apps/web/tools/daad.html
@@ -12,7 +12,7 @@
 
   <header class="tool-header">
     <div class="container">
-      <div class="tool-icon-large">🎮</div>
+      <div class="tool-icon-large"></div>
       <h1>DA&D</h1>
       <p class="tool-tagline">Degens Against Decency (Discord Party Game)</p>
       <p class="built-by">
@@ -21,12 +21,12 @@
     </body>
     <script src="/scripts/components-loader.js"></script>
     </html>
-            <li>🔄 Rotating dealer role each round</li>
-            <li>👥 2-10 players per game</li>
-            <li>🎯 Anonymous card submission and voting</li>
-            <li>🏆 Round-based scoring with leaderboards</li>
-            <li>🎲 Includes Poker game integration</li>
-            <li>🤖 Dedicated Discord bot (doesn't clutter TiltCheck bot)</li>
+            <li> Rotating dealer role each round</li>
+            <li> 2-10 players per game</li>
+            <li> Anonymous card submission and voting</li>
+            <li> Round-based scoring with leaderboards</li>
+            <li> Includes Poker game integration</li>
+            <li> Dedicated Discord bot (doesn't clutter TiltCheck bot)</li>
           </ul>
         </div>
       </div>
@@ -163,7 +163,7 @@
         <div class="tech-item"><h4>Game Flow</h4><p>Create → Join → Start → Play → Vote → Score</p></div>
         <div class="tech-item"><h4>Players</h4><p>2-10 players per game</p></div>
         <div class="tech-item"><h4>Architecture</h4><p>Dedicated Discord bot (separate from TiltCheck)</p></div>
-        <div class="tech-item"><h4>Status</h4><p>✅ Live - invite DA&D bot to play</p></div>
+        <div class="tech-item"><h4>Status</h4><p> Live - invite DA&D bot to play</p></div>
       </div>
     </div>
   </section>
