--- a/apps/web/tools/freespinscan.html
+++ b/apps/web/tools/freespinscan.html
@@ -22,7 +22,7 @@
 
   <header class="tool-header">
     <div class="container">
-      <div class="tool-icon-large">🎁</div>
+      <div class="tool-icon-large"></div>
       <h1>FreeSpinScan</h1>
       <p class="tool-tagline">Promo submission, moderation & prediction</p>
       <p class="built-by">
@@ -43,12 +43,12 @@
         <div class="feature-box">
           <h3>Key Features</h3>
           <ul>
-            <li>📥 Structured submission flow</li>
-            <li>🧪 AI risk + value scoring</li>
-            <li>🛡️ Moderator approval queue</li>
-            <li>⏳ Expiration tracking</li>
-            <li>🔮 Predicted next promo window</li>
-            <li>📊 Historical yield charts</li>
+            <li> Structured submission flow</li>
+            <li> AI risk + value scoring</li>
+            <li> Moderator approval queue</li>
+            <li> Expiration tracking</li>
+            <li> Predicted next promo window</li>
+            <li> Historical yield charts</li>
           </ul>
         </div>
       </div>
