--- a/apps/web/tools/justthetip.html
+++ b/apps/web/tools/justthetip.html
@@ -20,7 +20,7 @@
 
   <header class="tool-header">
     <div class="container">
-      <div class="tool-icon-large">🪙</div>
+      <div class="tool-icon-large"></div>
       <h1>JustTheTip</h1>
       <p class="tool-tagline">Non-custodial Solana tipping that actually works</p>
       <span class="status-badge status-live">Live in Discord</span>
@@ -43,13 +43,13 @@
         <div class="feature-box">
           <h3>Key Features</h3>
           <ul>
-            <li>✅ Non-custodial architecture (you always control your funds)</li>
-            <li>✅ 0.0007 SOL (~$0.07) per transaction to support development</li>
-            <li>✅ Airdrops to multiple users at once</li>
-            <li>✅ Direct wallet-to-wallet transfers</li>
-            <li>✅ Multi-wallet support (x402, Phantom, Solflare)</li>
-            <li>✅ Real-time Solana transaction tracking</li>
-            <li>✅ QualifyFirst withdrawal integration</li>
+            <li> Non-custodial architecture (you always control your funds)</li>
+            <li> 0.0007 SOL (~$0.07) per transaction to support development</li>
+            <li> Airdrops to multiple users at once</li>
+            <li> Direct wallet-to-wallet transfers</li>
+            <li> Multi-wallet support (x402, Phantom, Solflare)</li>
+            <li> Real-time Solana transaction tracking</li>
+            <li> QualifyFirst withdrawal integration</li>
           </ul>
         </div>
       </div>
@@ -191,17 +191,17 @@
       <div class="three-column">
         
         <div class="reason-card">
-          <h3>🔒 Your Keys, Your Crypto</h3>
+          <h3> Your Keys, Your Crypto</h3>
           <p>We never hold your funds. Ever. You maintain full control of your wallet at all times. If TiltCheck disappeared, you'd still own 100% of your crypto.</p>
         </div>
 
         <div class="reason-card">
-          <h3>⚖️ No Legal Exposure</h3>
+          <h3> No Legal Exposure</h3>
           <p>Because we don't custody funds, we're not a money transmitter. No KYC required. No regulatory nightmares. Just coordination, not custody.</p>
         </div>
 
         <div class="reason-card">
-          <h3>💸 Transparent Pricing</h3>
+          <h3> Transparent Pricing</h3>
           <p>0.0007 SOL (~$0.07) flat fee to support development. No hidden charges. No percentage cuts. Both transfers visible in one transaction.</p>
         </div>
 
