--- a/apps/web/tools/poker.html
+++ b/apps/web/tools/poker.html
@@ -12,7 +12,7 @@
 
   <header class="tool-header">
     <div class="container">
-      <div class="tool-icon-large">🃏</div>
+      <div class="tool-icon-large"></div>
       <h1>Poker (Hold'em)</h1>
       <p class="tool-tagline">Full table logic in Discord</p>
       <p class="built-by">
@@ -21,10 +21,10 @@
     </body>
     <script src="/scripts/components-loader.js"></script>
     </html>
-            <li>💬 Action summaries per street</li>
-            <li>📊 Player stats & win rates</li>
-            <li>🃏 Hand history archive</li>
-            <li>🏆 Session leaderboard</li>
+            <li> Action summaries per street</li>
+            <li> Player stats & win rates</li>
+            <li> Hand history archive</li>
+            <li> Session leaderboard</li>
           </ul>
         </div>
       </div>
