--- a/apps/web/tools/qualifyfirst.html
+++ b/apps/web/tools/qualifyfirst.html
@@ -12,7 +12,7 @@
 
   <header class="tool-header">
     <div class="container">
-      <div class="tool-icon-large">📋</div>
+      <div class="tool-icon-large"></div>
       <h1>QualifyFirst</h1>
       <p class="tool-tagline">AI-powered survey matching with screen-out avoidance</p>
       <p class="built-by">
@@ -21,11 +21,11 @@
     </body>
     <script src="/scripts/components-loader.js"></script>
     </html>
-            <li>📊 Historical screen-out tracking and avoidance</li>
-            <li>💰 Survey completion statistics and earnings tracking</li>
-            <li>💡 Recommended profile questions for better matching</li>
-            <li>💸 Non-custodial withdrawals via JustTheTip (minimum $5)</li>
-            <li>🌐 Progressive Web App (better than Discord commands)</li>
+            <li> Historical screen-out tracking and avoidance</li>
+            <li> Survey completion statistics and earnings tracking</li>
+            <li> Recommended profile questions for better matching</li>
+            <li> Non-custodial withdrawals via JustTheTip (minimum $5)</li>
+            <li> Progressive Web App (better than Discord commands)</li>
           </ul>
         </div>
       </div>
@@ -132,7 +132,7 @@
         <div class="tech-item"><h4>Profile Storage</h4><p>In-memory with event persistence</p></div>
         <div class="tech-item"><h4>Statistics</h4><p>Completion rate, earnings, screen-outs</p></div>
         <div class="tech-item"><h4>Privacy</h4><p>Opt-in profile, user controls all data</p></div>
-        <div class="tech-item"><h4>Status</h4><p>✅ Live as PWA (web app)</p></div>
+        <div class="tech-item"><h4>Status</h4><p> Live as PWA (web app)</p></div>
       </div>
     </div>
   </section>
