--- a/apps/web/tools/tiltcheck-core.html
+++ b/apps/web/tools/tiltcheck-core.html
@@ -20,7 +20,7 @@
 
   <header class="tool-header">
     <div class="container">
-      <div class="tool-icon-large">🧠</div>
+      <div class="tool-icon-large"></div>
       <h1>TiltCheck Core</h1>
       <p class="tool-tagline">Cool-down & pattern intelligence without judgment</p>
       
@@ -39,12 +39,12 @@
         <div class="feature-box">
           <h3>Key Features</h3>
           <ul>
-            <li>📈 Session pacing model</li>
-            <li>🧊 Cooldown suggestion nudges</li>
-            <li>🔁 Streak & relapse tracking (private)</li>
-            <li>👥 Accountability buddy opt-in</li>
-            <li>🪩 High-risk trigger detection (casino spam, loss-chasing)</li>
-            <li>⚙️ User-tunable thresholds</li>
+            <li> Session pacing model</li>
+            <li> Cooldown suggestion nudges</li>
+            <li> Streak & relapse tracking (private)</li>
+            <li> Accountability buddy opt-in</li>
+            <li> High-risk trigger detection (casino spam, loss-chasing)</li>
+            <li> User-tunable thresholds</li>
           </ul>
         </div>
       </div>
