--- a/apps/web/tools/triviadrops.html
+++ b/apps/web/tools/triviadrops.html
@@ -14,7 +14,7 @@
 
   <header class="tool-header">
     <div class="container">
-      <div class="tool-icon-large">🎯</div>
+      <div class="tool-icon-large"></div>
       <h1>TriviaDrops</h1>
       <p class="tool-tagline">This feature now lives inside JustTheTip</p>
       <span class="status-badge status-live">Redirecting…</span>
