--- a/apps/web/trust-scores.html
+++ b/apps/web/trust-scores.html
@@ -152,7 +152,7 @@
 
       <div id="trust-scores">
         <div id="trust-scores-loading">
-          <p>⏳ Loading trust scores…</p>
+          <p> Loading trust scores…</p>
         </div>
       </div>
 
