--- a/apps/web/privacy.html
+++ b/apps/web/privacy.html
@@ -89,8 +89,6 @@
       <p><strong>Last Updated:</strong> November 22, 2025</p>
       
       <section>
-        <div id="shared-nav"></div>
-  
         <h2>1. Introduction</h2>
         <p>
           TiltCheck ("we," "us," "our") is committed to protecting your privacy. This Privacy Policy explains how we collect, use, and safeguard your data when you use our Discord bot and related services.
@@ -111,16 +109,7 @@
           <li><strong>Tilt Scores:</strong> Calculated behavioral patterns (anonymized)</li>
         </ul>
 
-      </body>
-      <div id="shared-footer"></div>
-      <script>
-        (function(){
-          const navMount = document.getElementById('shared-nav');
-          const footerMount = document.getElementById('shared-footer');
-          if (navMount) { fetch('/components/nav.html').then(r=>r.text()).then(html=>{ navMount.innerHTML = html; }).catch(()=>{}); }
-          if (footerMount) { fetch('/components/footer.html').then(r=>r.text()).then(html=>{ footerMount.innerHTML = html; }).catch(()=>{}); }
-        })();
-      </script>
+        <h3>2.2 Voluntarily Provided Data</h3>
         <ul>
           <li><strong>Wallet Addresses:</strong> When you link a Solana wallet for tipping</li>
           <li><strong>Scam Reports:</strong> Casino domains and complaint details you submit</li>
