--- a/apps/web/responsible-gambling.html
+++ b/apps/web/responsible-gambling.html
@@ -85,7 +85,7 @@
 
   <main id="main-content" class="container">
     <article class="content-page">
-      <h1>🎰 Responsible Gambling</h1>
+      <h1> Responsible Gambling</h1>
       
       <section>
         <h2>Our Philosophy</h2>
@@ -139,7 +139,7 @@
           <strong>Recommended break activities:</strong>
         </p>
         <ul>
-          <li>Go outside and touch grass 🌿</li>
+          <li>Go outside and touch grass </li>
           <li>Drink some water</li>
           <li>Talk to a friend (not about gambling)</li>
           <li>Do something physical — walk, exercise, clean</li>
@@ -195,7 +195,7 @@
           <h3>TiltCheck</h3>
           <p>Protecting degens from tilt-induced disaster.</p>
           <p style="margin-top: var(--space-md); font-size: var(--text-sm);">
-            <a href="/responsible-gambling" style="color: var(--color-warning);">🎰 Responsible Gambling Resources</a>
+            <a href="/responsible-gambling" style="color: var(--color-warning);"> Responsible Gambling Resources</a>
           </p>
         </div>
         <div>
@@ -241,7 +241,7 @@
           </a>
         </div>
         <p style="margin-bottom: 0.5rem;">
-          <a href="https://github.com/jmenichole/Portfolio" target="_blank" rel="noopener" style="color: var(--color-primary);">made for degens by degens ❤️</a>
+          <a href="https://github.com/jmenichole/Portfolio" target="_blank" rel="noopener" style="color: var(--color-primary);">made for degens by degens </a>
         </p>
         <p>
           Built by <a href="https://github.com/jmenichole" target="_blank" rel="noopener">jmenichole</a> • 
